--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,1 +1,13 @@
 <h3>Task Form</h3>
+
+<form method="POST" action="">
+    <!-- protects from cross site forgery -->
+    {% csrf_token %}
+
+    <!-- Django's by default form -->
+    <!-- {{form}}  -->
+
+    <!-- .as_p for fomatting form so that the form looks good -->
+    {{form.as_p}}
+    <input type="submit" value="Submit">
+</form>
