--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,3 +1,6 @@
+{% extends 'base/main.html' %}
+{% block content %}
+
 {%  if request.user.is_authenticated %}
 <p>{{request.user}}</p>
 <a href="{% url 'logout' %}">Logout</a>
@@ -25,7 +28,7 @@
     {% for task in tasks %}
     <tr>
         <td>{{task.title}}</td>
-        <td><a href="{% url 'task' task.id %}">View</a></td>
+        <!-- <td><a href="{% url 'task' task.id %}">View</a></td> -->
         <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
         <td><a href="{%  url 'task-delete' task.id %}">Delete</a></td>
     </tr>
@@ -33,3 +36,5 @@
     <h3>No items in lists</h3>
     {% endfor %}
 </table>
+
+{% endblock content %}
