--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -18,6 +18,15 @@
             padding-top: 50px;
         }
 
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6{
+            font-family: 'Raleway' , sans-serif;
+        }
+
         .container{
             max-width: 550px;
             margin: auto;
