--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -27,6 +27,11 @@
             font-family: 'Raleway' , sans-serif;
         }
 
+        a,
+        p{
+            color: #4b5156;
+        }
+
         .container{
             max-width: 550px;
             margin: auto;
