--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -48,6 +48,11 @@
             border-radius: 5px 5px 0 0;
             background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%);
         }
+
+        .header-bar a{ 
+            color: rgb(247, 247, 247);
+            text-decoration: none;
+        }
     </style>
 
 </head>
