--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -40,12 +40,14 @@
             <div class="task-complete-icon"></div>
             <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i>
         </div>
-
+        <a class="delete-link" href="{%  url 'task-delete' task.id %}">&#215;</a> 
         {% else %}
         <div class="task-title">
             <div class="task-incomplete-icon"></div>
             <a href="{% url 'task-update' task.id %}">{{task}}</a>
         </div>
+        <a class="delete-link" href="{%  url 'task-delete' task.id %}">&#215;</a> 
+        <!-- html cross mark X = &#215; -->
         {% endif %}
     </div>
 
