commented out table

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -53,6 +53,15 @@
             color: rgb(247, 247, 247);
             text-decoration: none;
         }
+
+        .task-wrapper{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+            background-color: #fff;
+            border-top: rgb(226, 226, 226);
+        }
     </style>
 
 </head>
