--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -32,6 +32,8 @@
 <!-- </form> -->
 
 
+
+
 <div class="task-items-wrapper">
     {% for task in tasks %}
     <div class="task-wrapper">
@@ -55,5 +57,25 @@
     <h3>No items in list</h3>
     {% endfor %}
 </div>
+
+
+
+<!-- <table> -->
+    <!-- <tr> -->
+        <!-- <th>Item</th> -->
+        <!-- <th></th> -->
+        <!-- <th></th> -->
+    <!-- </tr> -->
+    <!-- {% for task in tasks %} -->
+    <!-- <tr> -->
+        <!-- <td>{{task.title}}</td> -->
+        <!-- <td><a href="{% url 'task' task.id %}">View</a></td> -->
+        <!-- <td><a href="{% url 'task-update' task.id %}">Edit</a></td> -->
+        <!-- <td><a href="{%  url 'task-delete' task.id %}">Delete</a></td> -->
+    <!-- </tr> -->
+    <!-- {% empty %} -->
+    <!-- <h3>No items in lists</h3> -->
+    <!-- {% endfor %} -->
+<!-- </table> -->
 
 {% endblock content %}
