--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -86,6 +86,14 @@
             background-color: rgb(218, 218, 218);
             border-radius: 50%;
         }
+
+        .delete-link {
+            text-decoration: none;
+            font-weight: 900;
+            color: #cf4949;
+            font-size: 22px;
+            line-height: 0;
+        }
     </style>
 
 </head>
