--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -94,6 +94,20 @@
             font-size: 22px;
             line-height: 0;
         }
+
+        #search-add-wrapper{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+        }
+
+        #add-link{
+            color: #eb796f;
+            text-decoration: none;
+            font-size: 42px;
+            text-shadow: 1px 1px #81413b;
+        }
     </style>
 
 </head>
