added CSS to submit search  button

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -108,6 +108,17 @@
             font-size: 42px;
             text-shadow: 1px 1px #81413b;
         }
+
+        .button{
+            border: 1px solid #eb796f;
+            background-color: #fafafa;
+            color: #be796f;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
     </style>
 
 </head>
