--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -29,7 +29,7 @@
     <form method="GET" style="margin-top: 20px; display: flex;">
     <!-- value="{{search_input}} for clearing search box data automatically -->
         <input type="text" name="search-area" value="{{search_input}}">
-        <input type="submit" value="Search">
+        <input class="button" type="submit" value="Search">
     </form>
     <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
     <!-- Add Task = &#x2b; -->
