--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -109,6 +109,20 @@
             text-shadow: 1px 1px #81413b;
         }
 
+        input[type=text]
+        input[type=password]
+        textarea{
+            border: 1px solid #eb796f;
+            border-radius: 5px;
+            padding: 10px;
+            width: 90%;
+        }
+
+        label{
+            padding-top: 10px !important;
+            display: block;
+        }
+
         .button{
             border: 1px solid #eb796f;
             background-color: #fafafa;
