--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -133,6 +133,10 @@
             cursor: pointer;
             text-decoration: none;
         }
+
+        .card-body{
+            padding: 20px;
+        }
     </style>
 
 </head>
