--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -11,16 +11,22 @@
 <h3>Task Form</h3>
 <!-- <a href="{% url 'tasks' %}">Go Back</a> -->
 
-<form method="POST" action="">
-    <!-- protects from cross site forgery -->
-    {% csrf_token %}
 
-    <!-- Django's by default form -->
-    <!-- {{form}}  -->
+<div class="card-body">
+    <form method="POST" action="">
+        <!-- protects from cross site forgery -->
+        {% csrf_token %}
+    
+        <!-- Django's by default form -->
+        <!-- {{form}}  -->
+    
+        <!-- .as_p for fomatting form so that the form looks good -->
+        {{form.as_p}}
+        <input class="button" type="submit" value="Submit">
+    </form>
+</div>
 
-    <!-- .as_p for fomatting form so that the form looks good -->
-    {{form.as_p}}
-    <input type="submit" value="Submit">
-</form>
+
+
 
 {% endblock content %}
